@@ -2,6 +2,7 @@
 
 === 3.9.2 (Released 01.09.2016)
 * #386 Selenide should download files "old way" if tests uses its own "custom" webdriver
+* #387 User can choose how to download files via Configuration.fileDownload
 
 === 3.9.1 (Released 27.08.2016)
 * #383 Selenide proxy server now allows requests and responses bigger than 2MB (but writes warning) 
